fixed pear package format

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml,v 1.7 2006-09-14 17:29:09 oops Exp $ -->
+<!-- $Id: package.xml.tmpl,v 1.1 2006-09-14 17:29:09 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -24,12 +24,12 @@
 - fixed pear package format
 </notes>
     <filelist>
-      <file role="php" md5sum="3263c25cb838ba8142915792ea342388" name="krisp.php"/>
-      <file role="php" md5sum="c6f60aacb4da052977f236b2cdf8e7bd" name="krisp/db.php"/>
-      <file role="php" md5sum="6e7f33650e8c2bb2610896f984dad902" name="krisp/krisp.php"/>
-      <file role="php" md5sum="54e79af18812562bf448928f6175eca6" name="krisp/pdo.php"/>
-      <file role="php" md5sum="6318a052556dffbbe9a0f42c76cb9122" name="krisp/sqlite.php"/>
-      <file role="php" md5sum="a696ce62d9a4d9868627ce1c14451c56" name="krisp/georegion.php"/>
+      <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
+      <file role="php" md5sum="@krisp/db.php@" name="krisp/db.php"/>
+      <file role="php" md5sum="@krisp/krisp.php@" name="krisp/krisp.php"/>
+      <file role="php" md5sum="@krisp/pdo.php@" name="krisp/pdo.php"/>
+      <file role="php" md5sum="@krisp/sqlite.php@" name="krisp/sqlite.php"/>
+      <file role="php" md5sum="@krisp/georegion.php@" name="krisp/georegion.php"/>
     </filelist>
   </release>
   <changelog>
