--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml.tmpl,v 1.1 2006-09-14 17:29:09 oops Exp $ -->
+<!-- $Id: package.xml.tmpl,v 1.2 2006-09-14 17:44:28 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -9,7 +9,7 @@
     <maintainer>
       <user>oops</user>
       <name>JoungKyun.Kim</name>
-      <email>admin@oops.org</email>
+      <email>http://www.oops.org</email>
       <role>lead</role>
     </maintainer>
   </maintainers>
