--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml.tmpl,v 1.2 2006-09-14 17:44:28 oops Exp $ -->
+<!-- $Id: package.xml.tmpl,v 1.3 2006-09-15 19:46:18 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -14,14 +14,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.1.2</version>
-    <date>2006-09-15</date>
+    <version>1.1.3</version>
+    <date>2006-09-16</date>
     <license>PHP/LGPL</license>
     <state>stable</state>
-    <notes>- add goeip city database search on/off function
-- add GeoIP database open type
-- add geoip region information
-- fixed pear package format
+    <notes>- fixed missing operation of retion information
 </notes>
     <filelist>
       <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
@@ -67,6 +64,14 @@
 - add GeoIP database open type
 - add geoip region information
 - fixed pear package format
+</notes>
+    </release>
+  <release>
+    <version>1.1.3</version>
+    <date>2006-09-16</date>
+    <license>PHP/LGPL</license>
+    <state>stable</state>
+    <notes>- fixed missing operation of retion information
 </notes>
     </release>
     <release>
