--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml.tmpl,v 1.3 2006-09-15 19:46:18 oops Exp $ -->
+<!-- $Id: package.xml.tmpl,v 1.4 2006-12-01 10:14:24 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -14,11 +14,12 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.1.3</version>
-    <date>2006-09-16</date>
+    <version>1.2.0</version>
+    <date>2006-12-01</date>
     <license>PHP/LGPL</license>
     <state>stable</state>
-    <notes>- fixed missing operation of retion information
+    <notes>- support over libkrisp 2.1.0
+- support userdb
 </notes>
     <filelist>
       <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
@@ -72,6 +73,15 @@
     <license>PHP/LGPL</license>
     <state>stable</state>
     <notes>- fixed missing operation of retion information
+</notes>
+    </release>
+  <release>
+    <version>1.2.0</version>
+    <date>2006-12-01</date>
+    <license>PHP/LGPL</license>
+    <state>stable</state>
+    <notes>- support over libkrisp 2.1.0
+- support userdb
 </notes>
     </release>
     <release>
