--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml.tmpl,v 1.4 2006-12-01 10:14:24 oops Exp $ -->
+<!-- $Id: package.xml.tmpl,v 1.5 2006-12-07 09:04:05 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -14,12 +14,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.2.0</version>
-    <date>2006-12-01</date>
+    <version>1.2.1</version>
+    <date>2006-12-07</date>
     <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- support over libkrisp 2.1.0
-- support userdb
+    <state>devel</state>
+    <notes>- fixed db error when don't exists userdb
 </notes>
     <filelist>
       <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
@@ -82,6 +81,14 @@
     <state>stable</state>
     <notes>- support over libkrisp 2.1.0
 - support userdb
+</notes>
+    </release>
+    <release>
+    <version>1.2.1</version>
+    <date>2006-12-07</date>
+    <license>PHP/LGPL</license>
+    <state>devel</state>
+    <notes>- fixed db error when don't exists userdb
 </notes>
     </release>
     <release>
