--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,97 +1,166 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml.tmpl,v 1.5 2006-12-07 09:04:05 oops Exp $ -->
-<package version="1.0">
-  <name>krisp</name>
-  <summary>php pure code for search krisp database</summary>
-  <description>PEAR's krisp:: package support search krisp and GeoIP database.</description>
-  <maintainers>
-    <maintainer>
-      <user>oops</user>
-      <name>JoungKyun.Kim</name>
-      <email>http://www.oops.org</email>
-      <role>lead</role>
-    </maintainer>
-  </maintainers>
-  <release>
-    <version>1.2.1</version>
-    <date>2006-12-07</date>
-    <license>PHP/LGPL</license>
-    <state>devel</state>
-    <notes>- fixed db error when don't exists userdb
-</notes>
-    <filelist>
-      <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
-      <file role="php" md5sum="@krisp/db.php@" name="krisp/db.php"/>
-      <file role="php" md5sum="@krisp/krisp.php@" name="krisp/krisp.php"/>
-      <file role="php" md5sum="@krisp/pdo.php@" name="krisp/pdo.php"/>
-      <file role="php" md5sum="@krisp/sqlite.php@" name="krisp/sqlite.php"/>
-      <file role="php" md5sum="@krisp/georegion.php@" name="krisp/georegion.php"/>
-    </filelist>
-  </release>
-  <changelog>
-    <release>
-      <version>1.0.4</version>
-      <date>2006-06-20</date>
-      <state>stable</state>
-      <notes>- first release
-</notes>
-    </release>
-    <release>
-      <version>1.1.0</version>
-      <date>2006-09-07</date>
-      <state>stable</state>
-      <notes>- support GeoIPCITY (if you have)
-- support GeoIPISP (if you have)
-- support GeoIPORG (if you have)
-- required over mod_geoip 1.1.0
-</notes>
-    </release>
-  <release>
-    <version>1.1.1</version>
-    <date>2006-09-09</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>-change memory type
-</notes>
-    </release>
-  <release>
-    <version>1.1.2</version>
-    <date>2006-09-15</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- add goeip city database search on/off function
-- add GeoIP database open type
-- add geoip region information
-- fixed pear package format
-</notes>
-    </release>
-  <release>
-    <version>1.1.3</version>
-    <date>2006-09-16</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- fixed missing operation of retion information
-</notes>
-    </release>
-  <release>
-    <version>1.2.0</version>
-    <date>2006-12-01</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- support over libkrisp 2.1.0
-- support userdb
-</notes>
-    </release>
-    <release>
-    <version>1.2.1</version>
-    <date>2006-12-07</date>
-    <license>PHP/LGPL</license>
-    <state>devel</state>
-    <notes>- fixed db error when don't exists userdb
-</notes>
-    </release>
-    <release>
-    </release>
-  </changelog>
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+	<!-- $Id: package.xml.tmpl,v 1.6 2009-07-07 12:43:32 oops Exp $ -->
+	<name>krisp</name>
+	<channel>pear.oops.org</channel>
+	<summary>php pure code for search krisp database</summary>
+	<description>PEAR&apos;s krisp:: package support search krisp and GeoIP database.
+	</description>
+	<lead>
+		<name>JoungKyun.Kim</name>
+		<user>oops</user>
+		<email>http://www.oops.org</email>
+		<active>yes</active>
+	</lead>
+	<date>2009-07-07</date>
+	<time>21:38:56</time>
+	<version>
+		<release>1.2.1</release>
+		<api>1.2.0</api>
+	</version>
+	<stability>
+		<release>devel</release>
+		<api>devel</api>
+	</stability>
+	<license>PHP/LGPL</license>
+	<notes>- fixed db error when don&apos;t exists userdb
+
+	</notes>
+	<contents>
+		<dir name="/">
+			<dir name="krisp">
+				<file md5sum="@krisp/db.php@" name="db.php" role="php" />
+				<file md5sum="@krisp/georegion.php@" name="georegion.php" role="php" />
+				<file md5sum="@krisp/krisp.php@" name="krisp.php" role="php" />
+				<file md5sum="@krisp/pdo.php@" name="pdo.php" role="php" />
+				<file md5sum="@krisp/sqlite.php@" name="sqlite.php" role="php" />
+			</dir> <!-- //krisp -->
+			<file md5sum="@krisp.php@" name="krisp.php" role="php" />
+		</dir> <!-- / -->
+	</contents>
+	<dependencies>
+		<required>
+			<php>
+				<min>5.0.0</min>
+			</php>
+			<pearinstaller>
+				<min>1.4.0b1</min>
+			</pearinstaller>
+		</required>
+	</dependencies>
+	<phprelease />
+	<changelog>
+		<release>
+			<version>
+				<release>1.0.4</release>
+				<api>1.0.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-06-20</date>
+			<license>PHP/LGPL</license>
+			<notes>- first release
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.0</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-07</date>
+			<license>PHP/LGPL</license>
+			<notes>- support GeoIPCITY (if you have)
+				- support GeoIPISP (if you have)
+				- support GeoIPORG (if you have)
+				- required over mod_geoip 1.1.0
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.1</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-09</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>-change memory type
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.2</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-15</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- add goeip city database search on/off function
+				- add GeoIP database open type
+				- add geoip region information
+				- fixed pear package format
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.3</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-16</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- fixed missing operation of retion information
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.2.0</release>
+				<api>1.2.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-12-01</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- support over libkrisp 2.1.0
+				- support userdb
+
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.2.1</release>
+				<api>1.2.0</api>
+			</version>
+			<stability>
+				<release>devel</release>
+				<api>devel</api>
+			</stability>
+			<date>2006-12-07</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- fixed db error when don&apos;t exists userdb
+
+			</notes>
+		</release>
+	</changelog>
 </package>
