--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id: package.xml.tmpl,v 1.6 2009-07-07 12:43:32 oops Exp $ -->
+	<!-- $Id: package.xml.tmpl,v 1.7 2009-07-07 12:47:19 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
@@ -12,8 +12,8 @@
 		<email>http://www.oops.org</email>
 		<active>yes</active>
 	</lead>
-	<date>2009-07-07</date>
-	<time>21:38:56</time>
+	<date>@curdate@</date>
+	<time>@curtime@</time>
 	<version>
 		<release>1.2.1</release>
 		<api>1.2.0</api>
