If ccode is KR, print with local character set about iname, city, region

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id: package.xml.tmpl,v 1.8 2009-10-21 17:42:35 oops Exp $ -->
+	<!-- $Id: package.xml.tmpl,v 1.9 2010-05-21 15:39:20 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
@@ -27,6 +27,7 @@
 - changed subdirectory name to KRISP
 - changed class name to upper case (from krisp to KRSIP)
 - fixed db error when don&apos;t exists userdb
+- If ccode is KR, print with local character set about iname, city, region.
 	</notes>
 	<contents>
 		<dir name="/">
@@ -158,6 +159,7 @@
 - changed subdirectory name to KRISP
 - changed class name to upper case (from krisp to KRSIP)
 - fixed db error when don&apos;t exists userdb
+- If ccode is KR, print with local character set about iname, city, region.
 </notes>
 		</release>
 	</changelog>
