--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -17,15 +17,15 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<date>@curdate@</date>
 	<time>@curtime@</time>
 	<version>
-		<release>2.0.0</release>
+		<release>2.0.1</release>
 		<api>2.0.0</api>
 	</version>
 	<stability>
-		<release>stable</release>
+		<release>devel</release>
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>- support libkrisp v3.0.0 database scheme
+	<notes>
 </notes>
 	<contents>
 		<dir name="/">
@@ -57,7 +57,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<changelog>
 		<release>
 			<version>
-				<release>2.0.0</release>
+				<release>2.0.1</release>
 				<api>2.0.0</api>
 			</version>
 			<stability>
@@ -65,6 +65,20 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 				<api>stable</api>
 			</stability>
 			<date>@curdate@</date>
+			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
+			<notes>
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>2.0.0</release>
+				<api>2.0.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2010-08-05</date>
 			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
 			<notes>- support libkrisp v3.0.0 database scheme
 </notes>
