--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id$ -->
+	<!-- $Id: package.xml.tmpl,v 1.8 2009-10-21 17:42:35 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
-	<description>PEAR&apos;s krisp:: package support search krisp database.
-This version is required over libkrisp v3.0.0 database scheme.
-If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
+	<description>PEAR&apos;s krisp:: package support search krisp and GeoIP database.
 	</description>
 	<lead>
 		<name>JoungKyun.Kim</name>
@@ -17,21 +15,25 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<date>@curdate@</date>
 	<time>@curtime@</time>
 	<version>
-		<release>2.0.1</release>
-		<api>2.0.0</api>
+		<release>1.2.1</release>
+		<api>1.2.0</api>
 	</version>
 	<stability>
-		<release>devel</release>
+		<release>stable</release>
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>
-</notes>
+	<notes>- support over class of php5
+- changed subdirectory name to KRISP
+- changed class name to upper case (from krisp to KRSIP)
+- fixed db error when don&apos;t exists userdb
+	</notes>
 	<contents>
 		<dir name="/">
 			<dir name="KRISP">
 				<file role="php" md5sum="@KRISP/db.php@"        name="db.php" />
-				<file role="php" md5sum="@KRISP/krisp.php@"     name="krisp.php" />
+				<file role="php" md5sum="@KRISP/georegion.php@" name="georegion.php" />
+				<file role="php" md5sum="@KRISP/krisp.php@"     name="krisp.php"     />
 				<file role="php" md5sum="@KRISP/pdo.php@"       name="pdo.php" />
 				<file role="php" md5sum="@KRISP/sqlite.php@"    name="sqlite.php" />
 			</dir> <!-- //krisp -->
@@ -46,41 +48,116 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 			<pearinstaller>
 				<min>1.4.0b1</min>
 			</pearinstaller>
-            <package>
-                <name>IPCALC</name>
-                <channel>pear.oops.org</channel>
-                <min>1.0.2</min>
-            </package>
 		</required>
 	</dependencies>
 	<phprelease />
 	<changelog>
 		<release>
 			<version>
-				<release>2.0.1</release>
-				<api>2.0.0</api>
+				<release>1.0.4</release>
+				<api>1.0.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-06-20</date>
+			<license>PHP/LGPL</license>
+			<notes>- first release
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.0</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-07</date>
+			<license>PHP/LGPL</license>
+			<notes>- support GeoIPCITY (if you have)
+- support GeoIPISP (if you have)
+- support GeoIPORG (if you have)
+- required over mod_geoip 1.1.0
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.1</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-09</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>-change memory type
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.2</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-15</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- add goeip city database search on/off function
+- add GeoIP database open type
+- add geoip region information
+- fixed pear package format
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.1.3</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-16</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- fixed missing operation of retion information
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.2.0</release>
+				<api>1.2.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-12-01</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- support over libkrisp 2.1.0
+- support userdb
+</notes>
+		</release>
+		<release>
+			<version>
+				<release>1.2.1</release>
+				<api>1.2.0</api>
 			</version>
 			<stability>
 				<release>stable</release>
 				<api>stable</api>
 			</stability>
 			<date>@curdate@</date>
-			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
-			<notes>
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>2.0.0</release>
-				<api>2.0.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2010-08-05</date>
-			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
-			<notes>- support libkrisp v3.0.0 database scheme
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- support over class of php5
+- changed subdirectory name to KRISP
+- changed class name to upper case (from krisp to KRSIP)
+- fixed db error when don&apos;t exists userdb
 </notes>
 		</release>
 	</changelog>
