--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id$ -->
+	<!-- $Id: package.xml.tmpl,v 1.10 2010-08-05 14:34:25 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
@@ -17,15 +17,15 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<date>@curdate@</date>
 	<time>@curtime@</time>
 	<version>
-		<release>2.0.1</release>
+		<release>2.0.0</release>
 		<api>2.0.0</api>
 	</version>
 	<stability>
-		<release>devel</release>
+		<release>stable</release>
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>
+	<notes>- support libkrisp v3.0.0 database scheme
 </notes>
 	<contents>
 		<dir name="/">
@@ -57,20 +57,6 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<changelog>
 		<release>
 			<version>
-				<release>2.0.1</release>
-				<api>2.0.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>@curdate@</date>
-			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
-			<notes>
-</notes>
-		</release>
-		<release>
-			<version>
 				<release>2.0.0</release>
 				<api>2.0.0</api>
 			</version>
@@ -78,7 +64,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 				<release>stable</release>
 				<api>stable</api>
 			</stability>
-			<date>2010-08-05</date>
+			<date>@curdate@</date>
 			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
 			<notes>- support libkrisp v3.0.0 database scheme
 </notes>
