fixed E_STRICT problems on PHP 5.4

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -25,7 +25,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>
+	<notes>* fixed E_STRICT problems on PHP 5.4
 </notes>
 	<contents>
 		<dir name="/">
@@ -66,7 +66,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 			</stability>
 			<date>@curdate@</date>
 			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
-			<notes>
+			<notes>* fixed E_STRICT problems on PHP 5.4
 </notes>
 		</release>
 		<release>
