fixed return wrong data when result is none on search method

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -26,6 +26,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	</stability>
 	<license>PHP/LGPL</license>
 	<notes>* fixed E_STRICT problems on PHP 5.4
+* fixed return wrong data when result is none on search method
 </notes>
 	<contents>
 		<dir name="/">
@@ -67,6 +68,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 			<date>@curdate@</date>
 			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
 			<notes>* fixed E_STRICT problems on PHP 5.4
+* fixed return wrong data when result is none on search method
 </notes>
 		</release>
 		<release>
