--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -17,7 +17,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<date>@curdate@</date>
 	<time>@curtime@</time>
 	<version>
-		<release>2.0.1</release>
+		<release>2.0.2</release>
 		<api>2.0.0</api>
 	</version>
 	<stability>
@@ -25,9 +25,8 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>* fixed E_STRICT problems on PHP 5.4
-* fixed return wrong data when result is none on search method
-</notes>
+	<notes>
+	</notes>
 	<contents>
 		<dir name="/">
 			<dir name="KRISP">
@@ -58,7 +57,7 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	<changelog>
 		<release>
 			<version>
-				<release>2.0.1</release>
+				<release>2.0.2</release>
 				<api>2.0.0</api>
 			</version>
 			<stability>
@@ -66,6 +65,20 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 				<api>stable</api>
 			</stability>
 			<date>@curdate@</date>
+			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
+			<notes>
+			</notes>
+		</release>
+		<release>
+			<version>
+				<release>2.0.1</release>
+				<api>2.0.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2015-05-16</date>
 			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
 			<notes>* fixed E_STRICT problems on PHP 5.4
 * fixed return wrong data when result is none on search method
